src/tests/cases/snapshots/excise__tests__cases__ui__enter_folder_medium_width-2.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/enter_folder_medium_width/subfolder1  ◆ COMPLETE               
 Space used ##.#K · Can reclaim ##.#K · Content size 16.0K · 4 items                      
Excise · REDUCED MOTION · store #.#K/#.#G                                                 
▟ STORAGE MAP ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏█████████████████████████████████████████file1██████████████████████████████████████████▕
▏██████████████████████████████████████8.0K · 100%███████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▏████████████████████████████████████████████████████████████████████████████████████████▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
                                                                                          
▟ SELECTED ITEM ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏file1                                                                                   ▕
▏◆ COMPLETE · file                                                                       ▕
▏Backspace delete                                                                        ▕
▏Can reclaim #.#K · Space used #.#K                                                      ▕
▏Content size 8.0K · 0 items                                                             ▕
▏Item check: Inode { device_id: ########, inode_number: ######## }                       ▕
▏Scan result: included                                                                   ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 arrows/hjkl move  Enter open/rescan  / filter  e export  t theme  ? help
