src/tests/cases/snapshots/excise__tests__cases__ui__enter_folder_medium_width-4.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[3]"
---
 EXCISE  /tmp/excise_tests/enter_folder_medium_width/subfolder1  ◆ COMPLETE               
 allocated 16.0K   reclaim 16.0K   apparent 16.0K   4 entries                             
──────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────┐
│┌───────────────────────────────────────────────────────────────────────────────────────┤
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││           ╔ EXIT ════════════════════════════════════════════════════════╗            │
││           ║                                                              ║            │
││           ║                         Quit Excise?                         ║            │
││           ║                  [y] quit    [Esc/q/n] back                  ║            │
││           ║                                                              ║            │
││           ║                                                              ║            │
││           ║                                                              ║            │
││           ╚══════════════════════════════════════════════════════════════╝            │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
││                                                                                       │
└┴───────────────────────────────────────────────────────────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M 
Excise · REDUCED MOTION
