src/tests/cases/snapshots/excise__tests__cases__ui__enter_folder_medium_width.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/enter_folder_medium_width  ◆ COMPLETE                          
 Space used ##.#K · Can reclaim ##.#K · Content size 16.0K · 4 items                      
Excise · REDUCED MOTION · mem 96.0M/384.0M                                                
▟ STORAGE MAP ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏██████████████████████████████████████████████████████████████████▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔┐▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏█████████████████████████subfolder1/ (+1)█████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏████████████████████████████8.0K · 50%████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░file3░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░4.0K · 25%░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏██████████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░▕▕
▏░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▕░░░░░░░░░░░░░░░░░░░░░▕▕
▏░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▕░░░░░░░░░░░░░░░░░░░░░▕▕
▏░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▕░░░░░░░░░░░░░░░░░░░░░▕▕
▏░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▕░░░░░░░░░░░░░░░░░░░░░▕▕
▏░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▕░░░░░░░░░░░░░░░░░░░░░▕▕
▏░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░file2░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▕░░░░░░░░░░░░░░░░░░░░░▕▕
▏░░░░░░░░░░░░░░░░░░░░░░░░░░░░4.0K · 25%░░░░░░░░░░░░░░░░░░░░░░░░░░░▕░░░░░░░░░░░░░░░░░░░░░▕▕
▏░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▕░░░░░░░░░░░░░░░░░░░░░▕▕
▏░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▕░░░░░░░░░░░░░░░░░░░░░▕▕
▏░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▕░░░░░░░░░░░░░░░░░░░░░▕▕
▏░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▕░░░░░░░░░░░░░░░░░░░░░▕▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
                                                                                          
▟ SELECTED ITEM ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏subfolder1                                                                              ▕
▏◆ COMPLETE · folder                                                                     ▕
▏Enter open · Backspace delete                                                           ▕
▏Can reclaim #.#K · Space used #.#K                                                      ▕
▏Content size 8.0K · 1 item                                                              ▕
▏Item check: Inode { device_id: ########, inode_number: ######## }                       ▕
▏Scan result: included                                                                   ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 arrows/hjkl move  Enter open/rescan  / filter  e export  t theme  ? help
