src/tests/cases/snapshots/excise__tests__cases__ui__enter_folder_small_width-4.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[3]"
---
 16.0K | /tmp/excis[..]mall_width/subfolder_[...]a_long_name
┌──────────────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│              ┌─────────────────────────────┐             │
│              │                             │             │
│              │                             │             │
│              │        Really quit?         │             │
│              │                             │             │
│              │                             │             │
│              │                             │             │
│              │                             │             │
│              │            (y/n)            │             │
│              │                             │             │
│              └─────────────────────────────┘             │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
                                                            
 ←↓↑→/<ENTER>/<ESC>: navigate, <BACKSPACE>: del
