src/tests/cases/snapshots/excise__tests__cases__ui__enter_folder_small_width.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_[...]r_small_width  ◆ COMPLETE         
 Used ##.#K · Can reclaim ##.#K · Content 16.0K · 4 items   
Excise · REDUCED MOTION · store 2.3K/4.0G                   
▟ LIST ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏▌▸ subfolder_wi[...]e_a_long_name       8.0K   50.0%      ▕
▏   file2                                4.0K   25.0%      ▕
▏   file3                                4.0K   25.0%      ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
                                                            
▟ SELECTED ITEM ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏subfolder_with_quite_a_long_name                          ▕
▏◆ COMPLETE · folder                                       ▕
▏Enter open · Backspace delete                             ▕
▏Can reclaim #.#K · Space used #.#K                        ▕
▏Content size 8.0K · 1 item                                ▕
▏Item check: Inode { device_id: ########, inode_number: ##…▕
▏Scan result: included                                     ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 arrows/hjkl move  Enter open/rescan  / filter  ? help
